<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:weightSum="5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/category_food"
            android:textSize="14sp"
            android:background="#33B5E5"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/category_daily"
            android:textSize="14sp"
            android:background="#AA66CC"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/category_digital"
            android:textSize="14sp"
            android:background="#99CC00"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/category_clothes"
            android:textSize="14sp"
            android:background="#FFBB33"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/category_other"
            android:textSize="14sp"
            android:background="#FF4444"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <lecho.lib.hellocharts.view.PieChartView
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textSize="16sp"
            android:text="0"/>
    </FrameLayout>
</LinearLayout>